# riz

./: .gitignore  .mailmap  .vercelignore  CHANGELOG.md  CLAUDE.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  Cargo.toml  LICENSE  NOTICE  README.md  SECURITY.md  clippy.toml  deny.toml  osbox.toml.example  riz.toml.example  server.json
.github/: CODEOWNERS  FUNDING.yml  PULL_REQUEST_TEMPLATE.md
.github/ISSUE_TEMPLATE/: bug_report.yml  config.yml  feature_request.yml
.github/workflows/: ci.yml  demo.yml  release.yml
assets/: bun-adapter.mjs  demo.tape  node-adapter.mjs  python-adapter.py
assets/templates/python-http/: riz.toml
assets/templates/python-websocket/: README.md  riz.toml
assets/templates/rust-http/: Cargo.toml  riz.toml
assets/templates/rust-websocket/: Cargo.toml  riz.toml
assets/templates/typescript-http/: riz.toml
assets/templates/typescript-websocket/: README.md  riz.toml
benches/: README.md  bench-config.toml  run-bench.sh
crates/riz-rust-runtime/: Cargo.toml
crates/riz-rust-runtime/src/: lib.rs
crates/riz-wasm/: Cargo.toml
crates/riz-wasm/src/: lib.rs
docs/: ACCOUNTS-TO-PROVISION.md  CAPABILITY-CARD.md  HOW-WE-BUILD.md  METRICS.md  PRODUCTION-READINESS.md  SAFETY.md  demo.tape  production-bugs.md  release.md
docs/assessments/: 2026-06-12-fable-5-assessment-rerun.md  2026-06-12-fable-5-assessment-run3.md  2026-06-12-fable-5-assessment.md  2026-06-12-opus-4.8-assessment.md  2026-07-03-power-of-10.md  2026-07-22-agent-build-journeys-evaluation.html  README.md
docs/integrations/: README.md  observability.md  otel-collector.yaml
docs/mcp/: getting-started.md  protocol-support.md
docs/migrate-from/: aws-lambda.md  localstack.md  sam-local.md
docs/plans/: 2026-06-10-gtm-and-aeo.md  2026-06-10-harden-backlog.md  v1-roadmap.md
docs/status/: 2026-05-29-session-state.md
examples/: README.md  demo.py  demo.sh  osbox.prod.toml  riz.agent.toml  riz.all.toml  riz.clerk.toml  riz.dev.toml  riz.jwt.toml  riz.prod.toml  riz.workos.toml  smoke-all.sh  ws_probe.py
examples/agent-loop/: README.md  agent_loop.py
examples/agent-sdk/: README.md  agent_demo.py
examples/ai-chat/: README.md  riz.toml
examples/lambdas/chat-rust/: Cargo.toml  README.md
examples/lambdas/chat-rust/src/: main.rs
examples/lambdas/echo-rust/: Cargo.toml  README.md
examples/lambdas/echo-rust/src/: main.rs
examples/lambdas/echo-wasm/: Cargo.toml
examples/lambdas/echo-wasm/src/: main.rs
examples/lambdas/orders-wasm/: Cargo.toml
examples/lambdas/orders-wasm/src/: main.rs
examples/typescript-todo/: README.md  riz.toml
registries/: README.md
scripts/: bench.sh  indexnow-ping.sh  safety-check.sh  validate.sh
src/: audit.rs  cache.rs  config.rs  cors.rs  deploy.rs  gateway.rs  hotreload.rs  lib.rs  main.rs  metrics.rs  router.rs  scaffold.rs  server.rs  state.rs  static_files.rs  template_fetch.rs  test_helpers.rs  tui_log_layer.rs
src/auth/: api_key.rs  authorizer.rs  bearer.rs  jwt.rs  middleware.rs  mod.rs  request.rs
src/broker/: client.rs  dynamo.rs  http.rs  mod.rs  pg.rs  s3.rs  server.rs  wire.rs
src/llm/: anthropic.rs  cost.rs  mock.rs  mod.rs  openai.rs  types.rs
src/observability/: ipc.rs  mod.rs  otel.rs  process.rs
src/process/: bun.rs  guard.rs  liveness.rs  mod.rs  node.rs  pool.rs  python.rs  runtime.rs  runtime_api.rs  rust.rs  safety.rs  static_binary.rs  wasm.rs
src/runtime/: mod.rs  process.rs  response.rs
src/system/: a2a.rs  health.rs  mcp.rs  metrics.rs  mod.rs  openai_compat.rs  openapi.rs  ready.rs  registry.rs
src/tui/: app.rs  mod.rs  snapshot.rs  widgets.rs
src/ws/: connection.rs  event.rs  management.rs  mod.rs  store.rs  upgrade.rs
templates/go/: README.md  riz.toml
templates/go-http/: README.md  main.go  riz.toml
templates/nodejs-http/: README.md  index.mjs  riz.toml
templates/python/: README.md  main.py  riz.toml
templates/python-http/: README.md
templates/python-websocket/: main.py
templates/rust/: README.md
templates/rust-http/: Cargo.toml  README.md
templates/rust-websocket/: Cargo.toml  README.md
templates/rust-websocket/src/: main.rs
templates/typescript-bun/: README.md  index.ts  package.json
templates/typescript-http/: README.md  index.ts
templates/typescript-node/: README.md  index.ts  package.json  riz.toml
templates/typescript-websocket/: index.ts
templates/wasm-http/: Cargo.toml  README.md  riz.toml
templates/wasm-http/src/: main.rs
templates/wasm-rust/: Cargo.toml  README.md  riz.toml
templates/wasm-rust/src/: main.rs
tests/: a2a_mesh.rs  a2a_server.rs  ai_chat_e2e.rs  alt_site.rs  api_key_rate_limit.rs  audit_log.rs  auth_clerk.rs  auth_workos.rs  authorizer_integration.rs  aws_conformance.rs  aws_contract.rs  broker_dynamo.rs  broker_envelope.rs  broker_http.rs  broker_limits.rs  broker_pg.rs  broker_s3.rs  broker_secrets.rs  bug_01_parse_failure_respawns.rs  bug_16_access_logs_include_correlation.rs  chaos.rs  claims_truth.rs  cli_doctor.rs  cli_init.rs  cli_mcp_inspect.rs  docs_commands_runnable.rs  e2e_smoke_all.rs  example_typescript_todo.rs  examples_agent.rs  examples_configs_valid.rs  function_env.rs  hot_swap_race.rs  hotreload_integration.rs  http_boundary.rs  install_telemetry.rs  integration_test.rs  lambda_shape_conformance.rs  landing_page_contract.rs  landing_structure.rs  mcp_progress.rs  (+55 more)
tests/claims/: registry.toml
tests/fixtures/broker-wasm/: Cargo.toml
tests/fixtures/broker-wasm/src/: main.rs
tests/fixtures/guard-wasm/: Cargo.toml
tests/fixtures/guard-wasm/src/: main.rs
tests/fixtures/parity/echo-rust/: Cargo.toml  README.md
tests/fixtures/parity/echo-rust/src/: main.rs
tests/pg_wire_mock/: mod.rs
web/: 404.html  agents.html  compare.html  demo.js  docs.html  examples.html  gateway.html  index.html  install  llms.txt  nav.js  og-card.html  robots.txt  sandbox.html  security.html  site.css  sitemap.xml  start.html  vercel.json
web/.well-known/: riz.json
web/alt/: agents.html  alt.css  compare.html  docs.html  examples.html  gateway.html  index.html  sandbox.html  start.html
web/api/: install.js
web/vs/: index.html
(+110 files in other folders)
