[workspace]
members = [
    ".",
    "crates/riz-rust-runtime",
    "examples/lambdas/echo-rust",
    "examples/lambdas/chat-rust",
]
# echo-wasm is built for wasm32-wasip1, not the host target — keep it out of the
# host workspace so `cargo build` / `cargo nextest` don't try to compile it.
exclude = ["examples/lambdas/echo-wasm"]

[package]
name = "riz"
version = "0.1.0"
edition = "2021"
repository = "https://github.com/24X7/riz"
description = "Self-hosted AWS Lambda runtime — HTTP API v2 + WebSocket handlers in Bun, Python, Rust. MCP server built in."
license = "Apache-2.0"

[[bin]]
name = "riz"
path = "src/main.rs"

[dependencies]
tokio = { version = "1", features = ["full"] }
axum = { version = "0.7", features = ["macros", "ws"] }
dashmap = "6"
clap = { version = "4", features = ["derive"] }
ratatui = "0.28"
crossterm = "0.28"
moka = { version = "0.12", features = ["future"] }
toml = "0.8"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
notify = "6"
aws-sdk-s3 = "1"
aws-config = "1"
zip = "2"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter", "fmt", "json"] }
anyhow = "1"
uuid = { version = "1", features = ["v4"] }
ipnet = "2"
nix = { version = "0.29", features = ["process", "signal", "resource"] }
signal-hook = "0.3"
sysinfo = "0.31"
base64 = "0.22"
async-trait = "0.1"
thiserror = "1"
indexmap = { version = "2", features = ["serde"] }
aws_lambda_events = { version = "0.15", default-features = false, features = ["apigw"] }
http = "1"
futures-util = "0.3"
chrono = { version = "0.4", default-features = false, features = ["std", "clock"] }
subtle = "2"
jsonwebtoken = "9"
reqwest = { version = "0.12", features = ["json", "blocking"] }
# Embedded WASM runtime (runtime = "wasm"). wasmtime enforces the WASI
# capability sandbox; the .wasm runs in the `riz __wasm-host` subprocess.
wasmtime = "45"
wasmtime-wasi = "45"

[target.'cfg(target_os = "linux")'.dependencies]
landlock = "0.4"

[profile.release]
opt-level = 3
lto = "thin"

# The profile that 'cargo dist' will build with
[profile.dist]
inherits = "release"
lto = "thin"

[dev-dependencies]
tempfile = "3"
tokio-test = "0.4"
tokio-tungstenite = "0.24"
regex = "1"
proptest = "1"
rand = "0.8"
# Ephemeral RSA keypair generation for the WorkOS/Clerk JWT-signature
# integration tests (tests/auth_workos.rs, tests/auth_clerk.rs). Dev-only — the
# release binary builds the JWKS DecodingKey from `n`/`e` and never signs, so
# `rsa` does NOT ship in the lean `riz` binary.
rsa = "0.9"

# Config for 'cargo dist'
[workspace.metadata.dist]
# The preferred cargo-dist version to use in CI (Cargo.toml SemVer syntax)
cargo-dist-version = "0.22.1"
# CI backends to support
ci = "github"
# The installers to generate for each app
installers = ["shell"]
# Target platforms to build apps for (Rust target-triple syntax)
targets = [
  "aarch64-apple-darwin",
  "x86_64-apple-darwin",
  "x86_64-unknown-linux-gnu",
  "aarch64-unknown-linux-gnu",
]
