[workspace]
members = [
    ".",
    "examples/lambdas/echo-rust",
    "examples/lambdas/chat-rust",
]
# echo-wasm is built for wasm32-wasip1, not the host target — keep it out of the
# host workspace so `cargo build` / `cargo nextest` don't try to compile it.
exclude = ["examples/lambdas/echo-wasm", "tests/fixtures/broker-wasm", "tests/fixtures/guard-wasm"]

# ── Power of 10 safety lints (docs/SAFETY.md) ─────────────────────────────
# Binding for code compiled into the riz binary: the riz package opts in via
# [lints] workspace = true below. The example lambdas deliberately do NOT
# inherit — the safety rules bind the runtime, not the user-facing samples.
# Levels here are the enforced tier (clean today, CI-gated via -D warnings);
# the ratchet tier lives in scripts/safety-check.sh until it burns to zero.
[workspace.lints.rust]
# Rule 9: every unsafe block is an explicit, justified exception — a local
# #[allow(unsafe_code)] plus a // SAFETY: proof (see process/pool.rs).
unsafe_code = "deny"
unsafe_op_in_unsafe_fn = "deny"

[workspace.lints.clippy]
# Rule 10: no placeholder or debug constructs reach the binary.
todo = "deny"
unimplemented = "deny"
dbg_macro = "deny"
# Rule 2: loops must provably terminate or be explicit supervised event loops.
infinite_loop = "deny"
maybe_infinite_iter = "deny"
# Rule 7: a dropped future is silently unexecuted work, not an ignored result.
let_underscore_future = "deny"
# Rule 3: resources are released by Drop, never leaked by forget.
mem_forget = "deny"
# Rule 9: unsafe hygiene — one operation per block, each with a SAFETY proof.
undocumented_unsafe_blocks = "deny"
multiple_unsafe_ops_per_block = "deny"
# Rule 3: unbounded channels (list in clippy.toml) are wrong on every target,
# tests included; burned to zero and promoted from the gate to workspace-deny
# on 2026-07-06.
disallowed_methods = "deny"
# Rule 1: `std::process::exit` only at the CLI top level — the three doctor
# verdict sites carry statement-scoped `#[allow(clippy::exit)]`. A test that
# called exit would kill the nextest runner, so this binds all targets.
# Promoted from the gate to workspace-deny on 2026-07-06.
exit = "deny"
# The remaining Power-of-10 lints (unwrap/expect/panic/indexing_slicing,
# arithmetic_side_effects, unreachable, too_many_lines, cognitive_complexity)
# stay production-scoped in scripts/safety-check.sh --gate (--lib --bins):
# integration-test helpers and #[cfg(test)] modules legitimately break them,
# and the policy exempts test code (docs/SAFETY.md "Scope").

[package]
name = "riz"
version = "0.1.0"
edition = "2021"
repository = "https://github.com/24X7/riz"
homepage = "https://riz.dev"
readme = "README.md"
description = "Self-hosted AWS Lambda + API Gateway v2 runtime where every function becomes an MCP tool — six runtimes (Bun, Node.js, Python, Rust, Go, WASM), one binary, no per-request cold start."
license = "Apache-2.0"
keywords = ["lambda", "serverless", "mcp", "aws", "runtime"]
categories = ["web-programming::http-server", "command-line-utilities", "development-tools"]

[[bin]]
name = "riz"
path = "src/main.rs"

# Opt in to the Power-of-10 workspace lints (docs/SAFETY.md).
[lints]
workspace = true

[dependencies]
tokio = { version = "1", features = ["full"] }
axum = { version = "0.7", features = ["macros", "ws"] }
dashmap = "6"
clap = { version = "4", features = ["derive"] }
ratatui = "0.28"
crossterm = "0.28"
moka = { version = "0.12", features = ["future"] }
toml = "0.8"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
notify = "6"
aws-sdk-s3 = "1"
aws-config = "1"
zip = "2"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter", "fmt", "json"] }
anyhow = "1"
uuid = { version = "1", features = ["v4"] }
ipnet = "2"
nix = { version = "0.29", features = ["process", "signal", "resource"] }
signal-hook = "0.3"
sysinfo = "0.31"
base64 = "0.22"
async-trait = "0.1"
thiserror = "1"
indexmap = { version = "2", features = ["serde"] }
aws_lambda_events = { version = "0.15", default-features = false, features = ["apigw"] }
http = "1"
futures-util = "0.3"
# Already in the tree via axum/hyper/reqwest — named directly for the gateway's
# streaming passthrough (Bytes chunks flow upstream→client untouched).
bytes = "1"
# Same story as bytes: already in the tree via axum/hyper — named for ReaderStream
# so static files stream to the socket instead of buffering fully per request.
tokio-util = { version = "0.7", features = ["io"] }
# Already in the tree via hyper (its Date header) — named for Last-Modified
# formatting in static_files, replacing hand-rolled calendar arithmetic.
httpdate = "1"
chrono = { version = "0.4", default-features = false, features = ["std", "clock"] }
subtle = "2"
# Already in the tree (transitively, several times over) — named for the auth
# cache key: the credential digest must be a cryptographic hash, since a
# collision between two Authorization headers would alias a cached ALLOW.
sha2 = "0.10"
jsonwebtoken = "9"
# "stream" powers SSE consumption (tests read /_riz/mcp event streams; the
# gateway will proxy upstream token streams with it later).
reqwest = { version = "0.12", features = ["json", "blocking", "stream"] }
# Embedded WASM runtime (runtime = "wasm"). wasmtime enforces the WASI
# capability sandbox; the .wasm runs in the `riz __wasm-host` subprocess.
wasmtime = "45"
wasmtime-wasi = "45"
# WASM resource broker (pg_query capability): Postgres-wire client + TLS.
# tokio-postgres covers Neon / Supabase / RDS / any PG; rustls (ring) +
# webpki-roots keep the single-static-binary story (no system TLS dependency).
tokio-postgres = { version = "0.7", features = ["with-serde_json-1", "with-uuid-1", "with-chrono-0_4"] }
rustls = { version = "0.23", default-features = false, features = ["ring", "std", "tls12", "logging"] }
tokio-postgres-rustls = "0.13"
webpki-roots = "0.26"

[target.'cfg(target_os = "linux")'.dependencies]
landlock = "0.4"

[profile.release]
opt-level = 3
lto = "thin"
# Power of 10 rules 5/7 (docs/SAFETY.md): integer overflow panics loudly in
# release instead of wrapping silently — a crash is diagnosable, silent
# corruption is not. Workers are separate processes; the blast radius of a
# panic is one request path, not the fleet.
overflow-checks = true

# The profile that 'cargo dist' will build with
[profile.dist]
inherits = "release"
lto = "thin"

[dev-dependencies]
tempfile = "3"
tokio-test = "0.4"
tokio-tungstenite = "0.24"
regex = "1"
proptest = "1"
rand = "0.8"
# Ephemeral RSA keypair generation for the WorkOS/Clerk JWT-signature
# integration tests (tests/auth_workos.rs, tests/auth_clerk.rs). Dev-only — the
# release binary builds the JWKS DecodingKey from `n`/`e` and never signs, so
# `rsa` does NOT ship in the lean `riz` binary.
rsa = "0.9"

# Config for 'cargo dist'
[workspace.metadata.dist]
# The preferred cargo-dist version to use in CI (Cargo.toml SemVer syntax)
cargo-dist-version = "0.22.1"
# CI backends to support
ci = "github"
# The installers to generate for each app
installers = ["shell"]
# Emit keyless GitHub build-provenance attestations for every release artifact
# (SLSA provenance via Actions OIDC — no signing keys to hold). Consumers verify
# with: gh attestation verify <file> --repo 24X7/riz
github-attestations = true
# Target platforms to build apps for (Rust target-triple syntax)
targets = [
  "aarch64-apple-darwin",
  "x86_64-unknown-linux-gnu",
  "aarch64-unknown-linux-gnu",
]

# Pin live GitHub runner images: cargo-dist 0.22.1 defaults to the now-retired
# ubuntu-20.04 (jobs queue forever). `global` covers plan/global/host/announce;
# the per-target entries set the build-matrix runners (read by the plan job).
[workspace.metadata.dist.github-custom-runners]
global = "ubuntu-latest"
aarch64-apple-darwin = "macos-14"
x86_64-unknown-linux-gnu = "ubuntu-latest"
# Native ARM runner (free for public repos) — cross-compiling riz's native deps
# (wasmtime, rustls) to aarch64 on x86 fails; build it natively instead.
aarch64-unknown-linux-gnu = "ubuntu-24.04-arm"
