[package]
name = "riz-rust-runtime"
version = "0.1.0"
edition = "2021"
description = "Rust runtime helper for AWS Lambda handlers on the riz host"
license = "Apache-2.0"

[dependencies]
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tokio = { version = "1", features = ["io-std", "io-util", "rt-multi-thread", "macros"] }
aws_lambda_events = { version = "0.15", default-features = false, features = ["apigw"] }
uuid = { version = "1", features = ["v4"] }
