[package]
name = "hello"
version = "0.1.0"
edition = "2021"

# The OFFICIAL AWS Lambda Rust runtime. No riz library — this exact binary runs
# unmodified on AWS Lambda and on riz, because riz speaks the AWS Lambda Runtime
# API. Build: `cargo build --release`, then point riz.toml's handler at
# `./target/release/hello`.
[dependencies]
lambda_runtime = "0.13"
aws_lambda_events = { version = "0.15", default-features = false, features = ["apigw"] }
tokio = { version = "1", features = ["macros", "rt-multi-thread"] }
serde_json = "1"
http = "1"
