[package]
name = "chat"
version = "0.1.0"
edition = "2021"

# The OFFICIAL AWS Lambda Rust runtime. No riz library — this exact binary runs
# unmodified on AWS Lambda and on riz, because riz speaks the AWS Lambda Runtime
# API. Build: `cargo build --release`, then `riz run`.
[dependencies]
lambda_runtime = "0.13"
aws_lambda_events = { version = "0.15", default-features = false, features = ["apigw"] }
tokio = { version = "1", features = ["macros", "rt-multi-thread"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
# No TLS — localhost @connections POST has no need for the rustls weight.
reqwest = { version = "0.12", default-features = false }
