# Independent workspace root — built for wasm32-wasip1, not part of any host
# workspace. riz runs the module under wasmtime's WASI capability sandbox.
[workspace]

[package]
name = "hello"
version = "0.1.0"
edition = "2021"

[dependencies]
serde_json = "1"
# The riz-wasm shim owns the wire: you write a handler, it runs the loop.
riz-wasm = { git = "https://github.com/24X7/riz" }

# A small, stripped wasm artifact. `opt-level = "s"` keeps the module compact;
# `strip` drops debug symbols.
[profile.release]
opt-level = "s"
strip = true
