[package]
name = "echo-rust"
version = "0.1.0"
edition = "2021"

[dependencies]
riz-rust-runtime = { path = "../../../crates/riz-rust-runtime" }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
aws_lambda_events = { version = "0.15", default-features = false, features = ["apigw"] }
http = "1"
