# Independent workspace root — built for wasm32-wasip1, not part of the host workspace.
[workspace]

[package]
name = "echo-wasm"
version = "0.1.0"
edition = "2021"
description = "WASM member of the echo parity set — compiled to wasm32-wasip1, run by riz under wasmtime"

[dependencies]
serde_json = "1"
riz-wasm = { path = "../../../crates/riz-wasm" }

[profile.release]
opt-level = "s"
strip = true
