[package]
name = "echo-rust"
version = "0.1.0"
edition = "2021"

# Example handler — not part of the published binary release.
[package.metadata.dist]
dist = false

[dependencies]
# The OFFICIAL AWS Lambda Rust runtime — no riz library. This exact binary runs
# unmodified on AWS Lambda and on riz (riz speaks the Lambda Runtime API).
lambda_runtime = "0.13"
aws_lambda_events = { version = "0.15", default-features = false, features = ["apigw"] }
tokio = { version = "1", features = ["macros", "rt-multi-thread"] }
serde_json = "1"
http = "1"
